syntax= "proto3";

package models;


message GarageCoordinate{
    float latitude=1;
    float longitude=2;
}

message Garage{
string id= 1;
string name =2;
GarageCoordinate garageCoordiante=3;
}

message GarageList{
    repeated Garage list = 1;
}