syntax="proto3";


package models;


enum UserGender{
    MALE=0;
    FEMALE=1;
}

message User{
    string id = 1;
    string name = 2;
    string password = 3;
    UserGender gender = 4;
}

message UserList{
    repeated User list = 1;
}